removed date picker , the old date picker is passing wrong date to date fields

--- a/Web/Views/Shared/_DataActivityIndicator.cshtml
+++ b/Web/Views/Shared/_DataActivityIndicator.cshtml
@@ -74,11 +74,11 @@
                                 <div class="col-sm-2 ">
 
                                     <Label><small>Start Date</small></Label>
-                                    <input type="text" class="form-control cats-datepicker2" placeholder="Start Date" data-toggle="tooltip" data-placement="top" ng-model="filterData.selectedStartDate" title="Enter Start Date">
+                                    <input type="text" class="form-control" placeholder="Start Date" data-toggle="tooltip" data-placement="top" ng-model="filterData.selectedStartDate" title="Enter Start Date">
                                 </div>
                                 <div class="col-sm-2 ">
                                     <Label><small>End Date</small></Label>
-                                    <input type="text" class="form-control cats-datepicker2" placeholder="End Date" data-toggle="tooltip" data-placement="top" ng-model="filterData.selectedEndDate" title="Enter End Date">
+                                    <input type="text" class="form-control" placeholder="End Date" data-toggle="tooltip" data-placement="top" ng-model="filterData.selectedEndDate" title="Enter End Date">
 
                                 </div>
 
