--- a/Web/Areas/Finance/Views/Cheque/Cheques.cshtml
+++ b/Web/Areas/Finance/Views/Cheque/Cheques.cshtml
@@ -145,7 +145,7 @@
                     {*@
     @*<form ng-submit="submit()" ng-controller="PaymentRequestManagementController">*@
 
-                    <form ng-submit="submit()" ng-controller="PaymentRequestManagementController">
+                    <form  ng-controller="PaymentRequestManagementController">
 
                         <input type="text" name="transporterID" id="transporterID" value="@ViewBag.TransporterID" style="display: none" />
                         <input type="text" name="transporterChequeID" id="transporterChequeID" value="" style="display: none" />
@@ -222,7 +222,7 @@
                             </div>
                             @if (UserAccountHelper.FinanceOperationCheck(FinanceConstants.Operation.Issue_cheque))
                             {
-                                <button id="btnSaveCollectiveCheque" class="btn blue" type="submit" ng-click="submit()">Save</button>
+                                <button id="btnSaveCollectiveCheque" class="btn blue"  ng-click="submit()">Save</button>
                             }
 
                         </div>
