--- a/Web/Areas/EarlyWarning/Views/GiftCertificate/Edit.cshtml
+++ b/Web/Areas/EarlyWarning/Views/GiftCertificate/Edit.cshtml
@@ -5,37 +5,42 @@
 @using Kendo.Mvc.UI
 @using LanguageHelpers.Localization
 @{
-    ViewBag.Title = Html.Translate("Gift Certificate");
-    Layout = "~/Views/Shared/_CATSLayout.cshtml";
+    ViewBag.Title = "Edit";
+    Layout = "~/Views/Shared/NewTheme _MainLayout.cshtml";
+    ViewBag.PageTitle = Html.Translate("Edit Gift Certificate");
+    ViewBag.PageTitleDescription = "";
+    ViewBag.IsInEditMode = false;
+    ViewBag.IsInEditMode = true;
 }
-
-@section Title
-{
-  @Html.Translate("Gift Certificate")
-}
-
-@section PageTitle
-{
-    <h1 class="hdr-blck big col-md-6">@Html.Translate("Edit Gift Certificate") 
-    </h1>
-}
-
 
 <div class="row">
     <div class="col-md-12">
-        @{ViewBag.IsInEditMode = true; }
-        @using (Html.BeginForm("Edit", "GiftCertificate", FormMethod.Post, new { id = "frm_edit_gift" }))
+        @using (Html.BeginForm("Edit", "GiftCertificate", FormMethod.Post, new { id = "frm_edit_gift", @class= "form-horizontal" }))
         {
-            <div class="box box-primary">
-
-                <div class="col-md-12 box-body" style="display: block;">
+            
+            <div class="portlet light bordered">
+                <div class="portlet-title">
+                    <div class="caption font-green-sharp">
+                        <i class="icon-list font-green-sharp"></i>
+                        <span class="caption-subject bold uppercase"> @Html.Translate("Gift Certificate Detail")</span>
+                    </div>
+                    <div class="tools">
+                        <a href="#" class="collapse" data-original-title="" title=""></a>
+                    </div>
+                    <div class="actions">
+                        <button class="btn green btn-sm" data-buttontype="btn_save" type="submit" data-submittedform="frm_edit_gift"><span class="fa fa-save"></span> @Html.Translate("Save")</button>
+                        <a class="btn red btn-sm" data-buttontype="btn_cancel" href="@Url.Action("Index", "GiftCertificate")"><span class="fa fa-lg fa-times-circle"></span> @Html.Translate("Cancel")</a>
+                        <a class="btn btn-icon-only btn-default fullscreen" href="javascript:;"></a>
+                    </div>
+                </div>
+                <div class="portlet-body row">
 
                     @Html.ValidationSummary(true)
 
                     @Html.HiddenFor(model => model.GiftCertificateID)
                     @Html.HiddenFor(model => model.rowCount)
 
-                    <div class="col-md-6 col-sm-6 form-horizontal">
+                    <div class="col-md-6 col-sm-6 ">
                         <div class="form-group">
                             @Html.LabelFor(model => model.GiftDate, Html.Translate("Gift Date"), new { @class = "col-sm-4 control-label cats-date-pref" })
                             <div class="col-sm-8">
@@ -97,7 +102,7 @@
                         </div>
 
                     </div>
-                    <div class="col-md-6 col-sm-6 form-horizontal">
+                    <div class="col-md-6 col-sm-6 ">
                         <div class="form-group">
 
                             @Html.LabelFor(model => model.SINumber, Html.Translate("SI/Batch Number"), new { @class = "col-sm-4 control-label" })
@@ -146,16 +151,9 @@
                         </div>
 
                     </div>
-
-
-                </div>
-                <div class="box-footer text-center">
-                    <button class="btn btn-primary " type="submit" data-submittedform="frm_edit_gift"><span class="fa fa-save"></span> @Html.Translate("Save")</button>
-                    <a class="btn  btn-default"  href="@Url.Action("Index", "GiftCertificate")"><span class="fa fa-lg fa-times-circle"></span> @Html.Translate("Cancel")</a>
                 </div>
             </div>
-           
-
+                    
         }
     </div>
 
