--- a/Web/Areas/EarlyWarning/Views/GiftCertificate/Detail.cshtml
+++ b/Web/Areas/EarlyWarning/Views/GiftCertificate/Detail.cshtml
@@ -7,168 +7,180 @@
 @using Kendo.Mvc.UI
 @using LanguageHelpers.Localization
 @{
-    ViewBag.Title = Html.Translate("Gift Certificate");
-    Layout = "~/Views/Shared/_CATSLayout.cshtml";
+    ViewBag.Title = "Details";
+    Layout = "~/Views/Shared/NewTheme _MainLayout.cshtml";
+    ViewBag.PageTitle = Html.Translate("Detail Gift Certificate");
+    ViewBag.PageTitleDescription = "";
+    ViewBag.IsInEditMode = true;
 }
 
-@section Title
-{
- @Html.Translate("Gift Certificate")
+@section Toolbar{
+    <a class="btn btn-fit-height grey-salt" data-buttontype="btn_cancel" href="@Url.Action("Index", "GiftCertificate")"><span class="fa fa-list"></span> @Html.Translate("Back to List")</a>
 }
 
-@section PageTitle
-{
-    <h1 class="hdr-blck big col-md-6">@Html.Translate("Detail Gift Certificate")
-    </h1>
-}
 <div class="row">
     <div class="col-md-12">
-        @{ViewBag.IsInEditMode = true; }
-        @using (Html.BeginForm("Edit", "GiftCertificate", FormMethod.Post, new { id = "frm_edit_gift" }))
+
+        @using (Html.BeginForm("Edit", "GiftCertificate", FormMethod.Post, new { id = "frm_edit_gift", @class = "form-horizontal" }))
         {
-            
-            
-            <fieldset >
-                <div class="box box-primary">
-            
-                    <div class="text-right mrgn5-v col-md-12">
-                       <a class="btn btn-primary btn-sm " data-buttontype="btn_back_to_list" href="@Url.Action("Index", "GiftCertificate")"><span class="fa fa-arrow-left"></span>@Html.Translate("Back to List")</a>
+            <div class="portlet light bordered bg-inverse">
+                <div class="portlet-title">
+                    <div class="caption font-green-sharp">
+                        <i class="icon-list font-green-sharp"></i>
+                        <span class="caption-subject bold uppercase"> @Html.Translate("Gift Certificate Header")</span>
                     </div>
-                    
-                    <div class="col-md-12 box-body" style="display: block;" id="giftheader">
+                    <div class="tools">
+                        <a href="#" class="collapse" data-original-title="" title=""></a>
+                    </div>
+                    <div class="actions">
+                        <a class="btn btn-icon-only btn-default fullscreen" href="javascript:;"></a>
+                    </div>
+                </div>
+                <div class="portlet-body row" id="giftheader">
+                    @Html.ValidationSummary(true)
 
-                        @Html.ValidationSummary(true)
+                    @Html.HiddenFor(model => model.GiftCertificateID)
+                    @Html.HiddenFor(model => model.rowCount)
 
-                        @Html.HiddenFor(model => model.GiftCertificateID)
-                        @Html.HiddenFor(model => model.rowCount)
+                    <div class="col-md-6 col-sm-6 form-horizontal">
+                        <div class="form-group">
+                            @Html.LabelFor(model => model.GiftDate, Html.Translate("Gift Date"), new { @class = "col-sm-4 control-label cats-date-pref" })
+                            <div class="col-sm-8">
 
-                        <div class="col-md-6 col-sm-6 form-horizontal">
-                            <div class="form-group">
-                                @Html.LabelFor(model => model.GiftDate, Html.Translate("Gift Date"), new { @class = "col-sm-4 control-label cats-date-pref" })
-                                <div class="col-sm-8">
-
-                                    @Html.TextBoxFor(model => model.GiftDate, new { @class = " form-control cats-datepicker2" })
-                                    @Html.ValidationMessageFor(model => model.GiftDate)
-                                </div>
+                                @Html.TextBoxFor(model => model.GiftDate, new { @class = " form-control cats-datepicker2" })
+                                @Html.ValidationMessageFor(model => model.GiftDate)
                             </div>
-                            <div class="form-group">
-                                @Html.LabelFor(model => model.DModeOfTransport, Html.Translate("Mode Of transport"), new { @class = "col-sm-4 control-label" })
-                                <div class="col-sm-8">
-                                    @Html.DropDownList("DModeOfTransport", null, String.Empty, new { @class = "form-control" })
-                                    @Html.ValidationMessageFor(model => model.DModeOfTransport)
-                                </div>
-                            </div>
-                            <div class="form-group">
-
-                                @Html.LabelFor(model => model.ProgramID, Html.Translate("Program"), new { @class = "col-sm-4 control-label" })
-
-                                <div class="col-sm-8">
-
-                                    @Html.DropDownList("ProgramID", null, String.Empty, new { @class = "form-control" })
-                                    @Html.ValidationMessageFor(model => model.ProgramID)
-                                </div>
-                            </div>
-                            <div class="form-group">
-
-                                @Html.LabelFor(model => model.DonorID, Html.Translate("Donor"), new { @class = "col-sm-4 control-label" })
-
-                                <div class="col-sm-8">
-
-                                    @Html.DropDownList("DonorID", null, String.Empty, new { @class = "form-control" })
-                                    @Html.ValidationMessageFor(model => model.DonorID)
-                                </div>
-                            </div>
-                            <div class="form-group">
-
-                                @Html.LabelFor(model => model.DeclarationNumber, Html.Translate("Declaration Number"), new { @class = "col-sm-4 control-label" })
-
-                                <div class="col-sm-8">
-
-                                    @Html.TextBoxFor(model => model.DeclarationNumber, new { @class = " form-control" })
-
-                                    @Html.ValidationMessageFor(model => model.DeclarationNumber)
-
-                                </div>
-                            </div>
-                            <div class="form-group">
-
-                                @Html.LabelFor(model => model.CommodityTypeID, Html.Translate("Commodity Type"), new { @class = "col-sm-4 control-label" })
-
-                                <div class="col-sm-8">
-
-                                    @Html.DropDownList("CommodityTypeID", null, String.Empty, new { @class = "form-control" })
-
-                                    @Html.ValidationMessageFor(model => model.CommodityTypeID)
-
-                                </div>
-                            </div>
-
                         </div>
-                        <div class="col-md-6 col-sm-6 form-horizontal">
-                            <div class="form-group">
-
-                                @Html.LabelFor(model => model.SINumber, Html.Translate("SI/Batch Number"), new { @class = "col-sm-4 control-label" })
-
-                                <div class="col-sm-8">
-                                    @Html.TextBoxFor(model => model.SINumber, new { @class = " form-control" })
-                                    @Html.ValidationMessageFor(model => model.SINumber)
-                                </div>
+                        <div class="form-group">
+                            @Html.LabelFor(model => model.DModeOfTransport, Html.Translate("Mode Of transport"), new { @class = "col-sm-4 control-label" })
+                            <div class="col-sm-8">
+                                @Html.DropDownList("DModeOfTransport", null, String.Empty, new { @class = "form-control" })
+                                @Html.ValidationMessageFor(model => model.DModeOfTransport)
                             </div>
-                            <div class="form-group">
+                        </div>
+                        <div class="form-group">
 
-                                @Html.LabelFor(model => model.PortName, Html.Translate("Port Name"), new { @class = "col-sm-4 control-label" })
+                            @Html.LabelFor(model => model.ProgramID, Html.Translate("Program"), new { @class = "col-sm-4 control-label" })
 
-                                <div class="col-sm-8">
-                                    @Html.TextBoxFor(model => model.PortName, new { @class = " form-control" })
-                                    @Html.ValidationMessageFor(model => model.PortName)
-                                </div>
+                            <div class="col-sm-8">
+
+                                @Html.DropDownList("ProgramID", null, String.Empty, new { @class = "form-control" })
+                                @Html.ValidationMessageFor(model => model.ProgramID)
                             </div>
-                            <div class="form-group">
+                        </div>
+                        <div class="form-group">
 
-                                @Html.LabelFor(model => model.ReferenceNo, Html.Translate("Reference Number"), new { @class = "col-sm-4 control-label" })
+                            @Html.LabelFor(model => model.DonorID, Html.Translate("Donor"), new { @class = "col-sm-4 control-label" })
 
-                                <div class="col-sm-8">
-                                    @Html.TextBoxFor(model => model.ReferenceNo, new { @class = " form-control" })
-                                    @Html.ValidationMessageFor(model => model.ReferenceNo)
-                                </div>
+                            <div class="col-sm-8">
+
+                                @Html.DropDownList("DonorID", null, String.Empty, new { @class = "form-control" })
+                                @Html.ValidationMessageFor(model => model.DonorID)
                             </div>
-                            <div class="form-group">
+                        </div>
+                        <div class="form-group">
 
-                                @Html.LabelFor(model => model.Vessel, Html.Translate("Vessel"), new { @class = "col-sm-4 control-label" })
+                            @Html.LabelFor(model => model.DeclarationNumber, Html.Translate("Declaration Number"), new { @class = "col-sm-4 control-label" })
 
-                                <div class="col-sm-8">
-                                    @Html.TextBoxFor(model => model.Vessel, new { @class = " form-control" })
-                                    @Html.ValidationMessageFor(model => model.Vessel)
-                                </div>
+                            <div class="col-sm-8">
+
+                                @Html.TextBoxFor(model => model.DeclarationNumber, new { @class = " form-control" })
+
+                                @Html.ValidationMessageFor(model => model.DeclarationNumber)
+
                             </div>
-                            <div class="form-group">
-                                <div class="control-label">
-                                    @Html.LabelFor(model => model.ETA, Html.Translate("ETA"), new { @class = "col-sm-4 control-label cats-date-pref" })
-                                </div>
+                        </div>
+                        <div class="form-group">
 
-                                <div class="col-sm-8">
-                                    @Html.TextBoxFor(model => model.ETA, new { @class = "form-control cats-datepicker2" })
-                                    @Html.ValidationMessageFor(model => model.ETA)
-                                </div>
+                            @Html.LabelFor(model => model.CommodityTypeID, Html.Translate("Commodity Type"), new { @class = "col-sm-4 control-label" })
+
+                            <div class="col-sm-8">
+
+                                @Html.DropDownList("CommodityTypeID", null, String.Empty, new { @class = "form-control" })
+
+                                @Html.ValidationMessageFor(model => model.CommodityTypeID)
+
                             </div>
-
                         </div>
 
+                    </div>
+                    <div class="col-md-6 col-sm-6 form-horizontal">
+                        <div class="form-group">
+
+                            @Html.LabelFor(model => model.SINumber, Html.Translate("SI/Batch Number"), new { @class = "col-sm-4 control-label" })
+
+                            <div class="col-sm-8">
+                                @Html.TextBoxFor(model => model.SINumber, new { @class = " form-control" })
+                                @Html.ValidationMessageFor(model => model.SINumber)
+                            </div>
+                        </div>
+                        <div class="form-group">
+
+                            @Html.LabelFor(model => model.PortName, Html.Translate("Port Name"), new { @class = "col-sm-4 control-label" })
+
+                            <div class="col-sm-8">
+                                @Html.TextBoxFor(model => model.PortName, new { @class = " form-control" })
+                                @Html.ValidationMessageFor(model => model.PortName)
+                            </div>
+                        </div>
+                        <div class="form-group">
+
+                            @Html.LabelFor(model => model.ReferenceNo, Html.Translate("Reference Number"), new { @class = "col-sm-4 control-label" })
+
+                            <div class="col-sm-8">
+                                @Html.TextBoxFor(model => model.ReferenceNo, new { @class = " form-control" })
+                                @Html.ValidationMessageFor(model => model.ReferenceNo)
+                            </div>
+                        </div>
+                        <div class="form-group">
+
+                            @Html.LabelFor(model => model.Vessel, Html.Translate("Vessel"), new { @class = "col-sm-4 control-label" })
+
+                            <div class="col-sm-8">
+                                @Html.TextBoxFor(model => model.Vessel, new { @class = " form-control" })
+                                @Html.ValidationMessageFor(model => model.Vessel)
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <div class="control-label">
+                                @Html.LabelFor(model => model.ETA, Html.Translate("ETA"), new { @class = "col-sm-4 control-label cats-date-pref" })
+                            </div>
+
+                            <div class="col-sm-8">
+                                @Html.TextBoxFor(model => model.ETA, new { @class = "form-control cats-datepicker2" })
+                                @Html.ValidationMessageFor(model => model.ETA)
+                            </div>
+                        </div>
 
                     </div>
 
                 </div>
-            </fieldset>
-
+            </div>
         }
     </div>
     <div class="col-md-12">
-        <div class="box box-solid box-primary">
-            <div class="box-header">
-                <h3 class="box-title">Commodity</h3>
+        <div class="portlet light bordered">
+            <div class="portlet-title">
+                <div class="caption font-green-sharp">
+                    <i class="icon-list font-green-sharp"></i>
+                    <span class="caption-subject bold uppercase"> @Html.Translate("Commodity")</span>
+                </div>
+                <div class="tools">
+                    <a href="#" class="collapse" data-original-title="" title=""></a>
+                </div>
+                <div class="actions">
+                    @if (UserAccountHelper.EarlyWarningPsnpOperationCheck(EarlyWarningConstants.Operation.Edit_Gift_Certificate))
+                    {
+                        <a id="save_button" class="btn green btn-sm"  data-buttontype="btn_save" href="javascript:saverecords()"><span class="fa fa-save"></span> @Html.Translate("Save")</a>
+                    }
+                    <a class="btn red btn-sm" data-buttontype="btn_cancel" href="@Url.Action("Index", "GiftCertificate")"><span class="fa fa-lg fa-times-circle"></span> @Html.Translate("Cancel")</a>
+                    <a class="btn btn-icon-only btn-default fullscreen" href="javascript:;"></a>
+                </div>
             </div>
-            <div class="table-responsive box-body">
-                @(Html.Kendo().Grid<GiftCertificateDetailsViewModel>()
+            <div class="portlet-body row">
+
+                <div class="table-responsive box-body">
+                    @(Html.Kendo().Grid<GiftCertificateDetailsViewModel>()
            .Name("Grid")
             .ToolBar(commands =>
             {
@@ -209,7 +221,7 @@
                                        {
                                            if (UserAccountHelper.EarlyWarningPsnpOperationCheck(EarlyWarningConstants.Operation.New_Gift_Certificate))
                                            {
-                                               create.Action("GiftCertificateDetail_Create", "GiftCertificate", new {id = Model.GiftCertificateID});
+                                               create.Action("GiftCertificateDetail_Create", "GiftCertificate", new { id = Model.GiftCertificateID });
                                            }
                                        })
                                        .Update(update =>
@@ -239,24 +251,15 @@
            .Navigatable().Scrollable().HtmlAttributes(new { style = "width:100%;" })
                     )
 
-            </div>
+                </div>
 
-            <div class="box-footer text-center">
-                @if (UserAccountHelper.EarlyWarningPsnpOperationCheck(EarlyWarningConstants.Operation.Edit_Gift_Certificate))
-                {
-                    <a id="save_button" class="btn btn btn-primary " data-buttontype="btn_save" href="javascript:saverecords()"><span class="fa fa-save"></span> @Html.Translate("Save")</a>
-                }
-                <a class="btn btn-default "  itemtypedata-buttontype="btn_cancel" href="@Url.Action("Index", "GiftCertificate")"><span class="fa fa-lg fa-times-circle"></span> @Html.Translate("Cancel")</a>
             </div>
         </div>
 
+        </div>
     </div>
-</div>
-
 
 @Html.ValidationMessageFor(model => model.rowCount)
-
-
 
 <script type="text/javascript">
 
@@ -272,7 +275,7 @@
             .removeClass("k-delete")
             .addClass("fa fa-times")
             .css({"margin-right":"5px"});
-       
+
     }
     function saverecords() {
         var url = '@Url.Action("Index", "GiftCertificate")';
